--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,5 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
 }
